--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1393.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "puppeteer": "^9.1.1",
