--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.17.1",
+    "force": "^0.0.3",
     "moment": "^2.29.1",
     "puppeteer": "^9.1.1",
     "uuid": "^8.3.2"
